--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.2",
+    "hbs": "^4.0.1",
+    "mongodb": "^3.0.2",
+    "mongoose": "^5.0.6",
     "path": "^0.12.7"
   }
 }
